--- a/report/proyecto.tex
+++ b/report/proyecto.tex
@@ -3,6 +3,7 @@
 \usepackage{listings}
 \usepackage[utf8]{inputenc}
 \usepackage[spanish]{babel}
+\usepackage{float}
 
 % \usepackage[style=list, number=none]{glossary} %
 %\usepackage{titlesec}
@@ -201,9 +202,12 @@ pdfproducer = {pdflatex}
 %%\chapter{Conclusiones y Trabajos Futuros}
 %
 %
-%%\nocite{*}
-%\bibliography{bibliografia/bibliografia}\addcontentsline{toc}{chapter}{Bibliografía}
-%\bibliographystyle{miunsrturl}
+
+% \nocite{*}
+\bibliography{bibliografia/bibliografia}{}
+\bibliographystyle{ieeetr}
+% \addcontentsline{toc}{chapter}{Bibliografía}
+% \bibliographystyle{miunsrturl}
 %
 %\appendix
 %\input{apendices/manual_usuario/manual_usuario}
