--- a/report/proyecto.tex
+++ b/report/proyecto.tex
@@ -185,9 +185,9 @@ pdfproducer = {pdflatex}
 
 \input{capitulos/01_Introduccion}
 %
-%\input{capitulos/02_EspecificacionRequisitos}
+\input{capitulos/02_Planificacion.tex}
 %
-%\input{capitulos/03_Planificacion}
+%\input{capitulos/02_EspecificacionRequisitos}
 %
 %\input{capitulos/04_Analisis}
 %
