[report] add info about SCRUM

--- a/report/bibliografia/bibliografia.bib
+++ b/report/bibliografia/bibliografia.bib
@@ -18,4 +18,25 @@
              }
 }
 
+@article{despa2014comparative,
+  title={Comparative study on software development methodologies},
+  author={Despa, Mihai Liviu}
+}
 
+@incollection{schwaber1997scrum,
+  title={Scrum development process},
+  author={Schwaber, Ken},
+  booktitle={Business object design and implementation},
+  pages={117--134},
+  year={1997},
+  publisher={Springer}
+}
+
+
+% A partir de aquí, páginas web:
+
+@misc{metodologiasDesarrollo,
+  title = {Metodologías de desarrollo de software: ¿qué son?},
+  howpublished = {\url{https://www.becas-santander.com/es/blog/metodologias-desarrollo-software.html}},
+  note = {Accedido: 04-03-2022}
+}
