train 70, 100, 150, 200 and 300 epochs with aug and aug2

--- a/experiments/taming_transformers/data_generation_and_aug.ipynb
+++ b/experiments/taming_transformers/data_generation_and_aug.ipynb
@@ -1,1 +1,455 @@
-{"nbformat":4,"nbformat_minor":0,"metadata":{"colab":{"name":"data_generation_and_aug.ipynb","provenance":[],"authorship_tag":"ABX9TyPY72J+felrUUopNfY/YL7z"},"kernelspec":{"name":"python3","display_name":"Python 3"},"language_info":{"name":"python"}},"cells":[{"cell_type":"code","execution_count":10,"metadata":{"id":"kcre8naKTT9-","colab":{"base_uri":"https://localhost:8080/"},"executionInfo":{"status":"ok","timestamp":1647246975327,"user_tz":-60,"elapsed":15253,"user":{"displayName":"Pedro Bedmar López","photoUrl":"https://lh3.googleusercontent.com/a-/AOh14GgDTwUVI1l0xxb1JsPU-jpXD7nANK221nZ_Rfet=s64","userId":"16390218131444039330"}},"outputId":"a1ea6402-ddf1-40f0-9751-4508c046d73a"},"outputs":[{"output_type":"stream","name":"stdout","text":["Mounted at /content/drive\n"]}],"source":["from google.colab import drive\n","drive.mount(\"/content/drive\")"]},{"cell_type":"markdown","source":["### Preprocesando imágenes de moléculas organometálicas de la Universidad de Neguev (articles_molecules)"],"metadata":{"id":"YQ9Kd8wP0BOY"}},{"cell_type":"code","source":["import os\n","import glob\n","from sklearn.model_selection import train_test_split\n","from PIL import Image, ImageOps"],"metadata":{"id":"M9ms9mNVz9bZ","executionInfo":{"status":"ok","timestamp":1647208745824,"user_tz":-60,"elapsed":753,"user":{"displayName":"Pedro Bedmar López","photoUrl":"https://lh3.googleusercontent.com/a-/AOh14GgDTwUVI1l0xxb1JsPU-jpXD7nANK221nZ_Rfet=s64","userId":"16390218131444039330"}}},"execution_count":2,"outputs":[]},{"cell_type":"code","source":["def resize_with_padding(img, required_size):\n","  img.thumbnail((required_size, required_size))\n","  delta_w = required_size - img.size[0]\n","  delta_h = required_size - img.size[1]\n","  pad_w = delta_w // 2\n","  pad_h = delta_h // 2\n","  padding = (pad_w, pad_h, delta_w - pad_w, delta_h - pad_h)\n","  return ImageOps.expand(img, padding, fill=(255,255,255))"],"metadata":{"id":"Hw9kMNrkzYju","executionInfo":{"status":"ok","timestamp":1647208745825,"user_tz":-60,"elapsed":5,"user":{"displayName":"Pedro Bedmar López","photoUrl":"https://lh3.googleusercontent.com/a-/AOh14GgDTwUVI1l0xxb1JsPU-jpXD7nANK221nZ_Rfet=s64","userId":"16390218131444039330"}}},"execution_count":3,"outputs":[]},{"cell_type":"code","source":["images_path = \"/content/drive/MyDrive/4_ING_INFORMATICA/tfg/datasets/negev/articles_molecules/\"\n","filenames = glob.glob(images_path+\"*.png\")\n","\n","os.makedirs(images_path+\"preprocess/\", exist_ok=True)\n","\n","required_size = 192\n","for filename in filenames:\n","  img = Image.open(filename)\n","  width, height = img.size\n","  img = resize_with_padding(img, required_size)\n","  \n","  img.convert(\"RGB\").save(images_path+\"preprocess/\"+filename.split(\"/\")[-1].replace(\"png\",\"jpg\"))"],"metadata":{"id":"G24wfgiw1Qnh"},"execution_count":null,"outputs":[]},{"cell_type":"code","source":["preprop_images_path = images_path+\"preprocess/\"\n","filenames = glob.glob(preprop_images_path+\"*.jpg\")\n","train, test = train_test_split(filenames, test_size=0.25, random_state=42)"],"metadata":{"id":"o8EabD0L0azC"},"execution_count":null,"outputs":[]},{"cell_type":"code","source":["with open(preprop_images_path+\"xx_train.txt\", \"w\") as f:\n","  for filename in train[:-1]:\n","    f.write(filename+\"\\n\")\n","  f.write(train[-1])\n","\n","with open(preprop_images_path+\"xx_test.txt\", \"w\") as f:\n","  for filename in test[:-1]:\n","    f.write(filename+\"\\n\")\n","  f.write(test[-1])"],"metadata":{"id":"6nRzXcaaBW30"},"execution_count":null,"outputs":[]},{"cell_type":"markdown","source":["### Aumentando dataset"],"metadata":{"id":"gsfwptG30dDO"}},{"cell_type":"code","source":["import imgaug as ia\n","from imgaug import augmenters as iaa\n","\n","ia.seed(1)\n","\n","augmentation_seq = iaa.Sequential([\n","                      iaa.Sometimes(0.5, iaa.GaussianBlur(sigma=(0, 0.5))),\n","                      iaa.Affine(\n","                          scale={\"x\": (0.8, 1.0), \"y\": (0.8, 1.0)},\n","                          rotate=(-25, 25),\n","                          shear=(-5,5),\n","                          cval=255\n","                      )\n","], random_order=True)"],"metadata":{"id":"Gkpo0nyJ0sx1","executionInfo":{"status":"ok","timestamp":1647246075381,"user_tz":-60,"elapsed":971,"user":{"displayName":"Pedro Bedmar López","photoUrl":"https://lh3.googleusercontent.com/a-/AOh14GgDTwUVI1l0xxb1JsPU-jpXD7nANK221nZ_Rfet=s64","userId":"16390218131444039330"}}},"execution_count":3,"outputs":[]},{"cell_type":"code","source":["import os\n","import glob\n","from sklearn.model_selection import train_test_split\n","import cv2\n","\n","images_path = \"/content/drive/MyDrive/4_ING_INFORMATICA/tfg/datasets/negev/articles_molecules/\"\n","preprop_images_path = images_path+\"preprocess/\"\n","filenames = glob.glob(preprop_images_path+\"*.jpg\")\n","\n","images = []\n","for filename in filenames:\n","  img = cv2.imread(filename)\n","  images.append(img)\n","\n","augmented_images = images + augmentation_seq(images=images*2) \n","count = 0\n","for img in augmented_images:\n","  cv2.imwrite(preprop_images_path+\"aug/\"+str(count)+\".jpg\", img)\n","  count += 1"],"metadata":{"id":"LAb4F_ld4mox","executionInfo":{"status":"ok","timestamp":1647246075382,"user_tz":-60,"elapsed":5,"user":{"displayName":"Pedro Bedmar López","photoUrl":"https://lh3.googleusercontent.com/a-/AOh14GgDTwUVI1l0xxb1JsPU-jpXD7nANK221nZ_Rfet=s64","userId":"16390218131444039330"}}},"execution_count":4,"outputs":[]},{"cell_type":"code","source":["preprop_aug_images_path = preprop_images_path+\"aug/\"\n","filenames = glob.glob(preprop_aug_images_path+\"*.jpg\")\n","train, test = train_test_split(filenames, test_size=0.25, random_state=42)"],"metadata":{"id":"FkXCssSzBOHi","executionInfo":{"status":"ok","timestamp":1647247007593,"user_tz":-60,"elapsed":11319,"user":{"displayName":"Pedro Bedmar López","photoUrl":"https://lh3.googleusercontent.com/a-/AOh14GgDTwUVI1l0xxb1JsPU-jpXD7nANK221nZ_Rfet=s64","userId":"16390218131444039330"}}},"execution_count":11,"outputs":[]},{"cell_type":"code","source":["with open(preprop_aug_images_path+\"xx_train.txt\", \"w\") as f:\n","  for filename in train[:-1]:\n","    f.write(filename+\"\\n\")\n","  f.write(train[-1])\n","\n","with open(preprop_aug_images_path+\"xx_test.txt\", \"w\") as f:\n","  for filename in test[:-1]:\n","    f.write(filename+\"\\n\")\n","  f.write(test[-1])"],"metadata":{"id":"-gsc_N-Og0eD","executionInfo":{"status":"ok","timestamp":1647247020059,"user_tz":-60,"elapsed":211,"user":{"displayName":"Pedro Bedmar López","photoUrl":"https://lh3.googleusercontent.com/a-/AOh14GgDTwUVI1l0xxb1JsPU-jpXD7nANK221nZ_Rfet=s64","userId":"16390218131444039330"}}},"execution_count":12,"outputs":[]},{"cell_type":"code","source":[""],"metadata":{"id":"7ZBqmkIAkszZ"},"execution_count":null,"outputs":[]}]}
+{
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 18375,
+     "status": "ok",
+     "timestamp": 1648059122420,
+     "user": {
+      "displayName": "Pedro Bedmar López",
+      "photoUrl": "https://lh3.googleusercontent.com/a-/AOh14GgDTwUVI1l0xxb1JsPU-jpXD7nANK221nZ_Rfet=s64",
+      "userId": "16390218131444039330"
+     },
+     "user_tz": -60
+    },
+    "id": "kcre8naKTT9-",
+    "outputId": "0f5b85e9-3718-4e21-faec-0a2b522a5564",
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mounted at /content/drive\n"
+     ]
+    }
+   ],
+   "source": [
+    "from google.colab import drive\n",
+    "drive.mount(\"/content/drive\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Google Colab"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 413,
+     "status": "ok",
+     "timestamp": 1648059139765,
+     "user": {
+      "displayName": "Pedro Bedmar López",
+      "photoUrl": "https://lh3.googleusercontent.com/a-/AOh14GgDTwUVI1l0xxb1JsPU-jpXD7nANK221nZ_Rfet=s64",
+      "userId": "16390218131444039330"
+     },
+     "user_tz": -60
+    },
+    "id": "EhjJ7xBswAxw",
+    "outputId": "fc266750-6bd2-4f59-c159-1a3aa447161a"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/content/drive/MyDrive/4_ING_INFORMATICA/tfg/tfg/experiments/taming_transformers/taming-transformers\n"
+     ]
+    }
+   ],
+   "source": [
+    "%cd /content/drive/MyDrive/4_ING_INFORMATICA/tfg/tfg/experiments/taming_transformers/taming-transformers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "NGPU server"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/mnt/homeGPU1/pbedmar/pycharm/experiments/taming_transformers/taming-transformers\n"
+     ]
+    }
+   ],
+   "source": [
+    "%cd /mnt/homeGPU1/pbedmar/pycharm/experiments/taming_transformers/taming-transformers/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "YQ9Kd8wP0BOY"
+   },
+   "source": [
+    "### Preprocesando imágenes de moléculas organometálicas de la Universidad de Neguev (articles_molecules)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "executionInfo": {
+     "elapsed": 696,
+     "status": "ok",
+     "timestamp": 1648059166389,
+     "user": {
+      "displayName": "Pedro Bedmar López",
+      "photoUrl": "https://lh3.googleusercontent.com/a-/AOh14GgDTwUVI1l0xxb1JsPU-jpXD7nANK221nZ_Rfet=s64",
+      "userId": "16390218131444039330"
+     },
+     "user_tz": -60
+    },
+    "id": "M9ms9mNVz9bZ"
+   },
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import glob\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from PIL import Image, ImageOps"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "executionInfo": {
+     "elapsed": 4,
+     "status": "ok",
+     "timestamp": 1648059166390,
+     "user": {
+      "displayName": "Pedro Bedmar López",
+      "photoUrl": "https://lh3.googleusercontent.com/a-/AOh14GgDTwUVI1l0xxb1JsPU-jpXD7nANK221nZ_Rfet=s64",
+      "userId": "16390218131444039330"
+     },
+     "user_tz": -60
+    },
+    "id": "Hw9kMNrkzYju"
+   },
+   "outputs": [],
+   "source": [
+    "def resize_with_padding(img, required_size):\n",
+    "  img.thumbnail((required_size, required_size))\n",
+    "  delta_w = required_size - img.size[0]\n",
+    "  delta_h = required_size - img.size[1]\n",
+    "  pad_w = delta_w // 2\n",
+    "  pad_h = delta_h // 2\n",
+    "  padding = (pad_w, pad_h, delta_w - pad_w, delta_h - pad_h)\n",
+    "  return ImageOps.expand(img, padding, fill=(255,255,255))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "executionInfo": {
+     "elapsed": 64852,
+     "status": "ok",
+     "timestamp": 1648059284711,
+     "user": {
+      "displayName": "Pedro Bedmar López",
+      "photoUrl": "https://lh3.googleusercontent.com/a-/AOh14GgDTwUVI1l0xxb1JsPU-jpXD7nANK221nZ_Rfet=s64",
+      "userId": "16390218131444039330"
+     },
+     "user_tz": -60
+    },
+    "id": "G24wfgiw1Qnh"
+   },
+   "outputs": [],
+   "source": [
+    "images_path = \"../../../datasets/negev/articles_molecules/\"\n",
+    "filenames = glob.glob(images_path+\"*.png\")\n",
+    "\n",
+    "os.makedirs(images_path+\"preprocess/\", exist_ok=True)\n",
+    "\n",
+    "required_size = 192\n",
+    "for filename in filenames:\n",
+    "  img = Image.open(filename)\n",
+    "  width, height = img.size\n",
+    "  img = resize_with_padding(img, required_size)\n",
+    "  \n",
+    "  img.convert(\"RGB\").save(images_path+\"preprocess/\"+filename.split(\"/\")[-1].replace(\"png\",\"jpg\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "executionInfo": {
+     "elapsed": 7,
+     "status": "ok",
+     "timestamp": 1648059284712,
+     "user": {
+      "displayName": "Pedro Bedmar López",
+      "photoUrl": "https://lh3.googleusercontent.com/a-/AOh14GgDTwUVI1l0xxb1JsPU-jpXD7nANK221nZ_Rfet=s64",
+      "userId": "16390218131444039330"
+     },
+     "user_tz": -60
+    },
+    "id": "o8EabD0L0azC"
+   },
+   "outputs": [],
+   "source": [
+    "preprop_images_path = images_path+\"preprocess/\"\n",
+    "filenames = glob.glob(preprop_images_path+\"*.jpg\")\n",
+    "train, test = train_test_split(filenames, test_size=0.25, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "executionInfo": {
+     "elapsed": 813,
+     "status": "ok",
+     "timestamp": 1648059285520,
+     "user": {
+      "displayName": "Pedro Bedmar López",
+      "photoUrl": "https://lh3.googleusercontent.com/a-/AOh14GgDTwUVI1l0xxb1JsPU-jpXD7nANK221nZ_Rfet=s64",
+      "userId": "16390218131444039330"
+     },
+     "user_tz": -60
+    },
+    "id": "6nRzXcaaBW30"
+   },
+   "outputs": [],
+   "source": [
+    "with open(preprop_images_path+\"xx_train.txt\", \"w\") as f:\n",
+    "  for filename in train[:-1]:\n",
+    "    f.write(filename+\"\\n\")\n",
+    "  f.write(train[-1])\n",
+    "\n",
+    "with open(preprop_images_path+\"xx_test.txt\", \"w\") as f:\n",
+    "  for filename in test[:-1]:\n",
+    "    f.write(filename+\"\\n\")\n",
+    "  f.write(test[-1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "gsfwptG30dDO"
+   },
+   "source": [
+    "### Aumentando dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "executionInfo": {
+     "elapsed": 1301,
+     "status": "ok",
+     "timestamp": 1648059286818,
+     "user": {
+      "displayName": "Pedro Bedmar López",
+      "photoUrl": "https://lh3.googleusercontent.com/a-/AOh14GgDTwUVI1l0xxb1JsPU-jpXD7nANK221nZ_Rfet=s64",
+      "userId": "16390218131444039330"
+     },
+     "user_tz": -60
+    },
+    "id": "Gkpo0nyJ0sx1"
+   },
+   "outputs": [],
+   "source": [
+    "import imgaug as ia\n",
+    "from imgaug import augmenters as iaa\n",
+    "\n",
+    "ia.seed(1)\n",
+    "\n",
+    "augmentation_seq = iaa.Sequential([\n",
+    "                      iaa.Sometimes(0.5, iaa.GaussianBlur(sigma=(0, 0.5))),\n",
+    "                      iaa.Affine(\n",
+    "                          scale={\"x\": (0.8, 1.0), \"y\": (0.8, 1.0)},\n",
+    "                          rotate=(-25, 25),\n",
+    "                          shear=(-5,5),\n",
+    "                          cval=255\n",
+    "                      )\n",
+    "], random_order=True)\n",
+    "\n",
+    "\n",
+    "augmentation_seq_2 = iaa.Sequential([\n",
+    "                      iaa.Sometimes(0.5, iaa.GaussianBlur(sigma=(0, 0.5))),\n",
+    "                      iaa.LinearContrast((0.75, 1.5)),\n",
+    "                      iaa.Affine(\n",
+    "                          scale={\"x\": (0.7, 1.0), \"y\": (0.7, 1.0)},\n",
+    "                          rotate=(-45, 45),\n",
+    "                          shear=(-10,10),\n",
+    "                          translate_percent={\"x\": (-0.1, 0.1), \"y\": (-0.1, 0.1)},\n",
+    "                          cval=255\n",
+    "                      ),\n",
+    "                      iaa.Multiply((0.8, 1.2), per_channel=0.25),\n",
+    "                      iaa.AdditiveGaussianNoise(loc=0, scale=(0.0, 0.05*255), per_channel=0.3),\n",
+    "                      iaa.Fliplr(0.3)\n",
+    "], random_order=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "executionInfo": {
+     "elapsed": 217909,
+     "status": "ok",
+     "timestamp": 1648059504725,
+     "user": {
+      "displayName": "Pedro Bedmar López",
+      "photoUrl": "https://lh3.googleusercontent.com/a-/AOh14GgDTwUVI1l0xxb1JsPU-jpXD7nANK221nZ_Rfet=s64",
+      "userId": "16390218131444039330"
+     },
+     "user_tz": -60
+    },
+    "id": "LAb4F_ld4mox"
+   },
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import glob\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "import cv2\n",
+    "\n",
+    "\n",
+    "def aug(directory, aug_seq, repeat=2):\n",
+    "  images_path = \"../../../datasets/negev/articles_molecules/\"\n",
+    "  preprop_images_path = images_path+\"preprocess/\"\n",
+    "  filenames = glob.glob(preprop_images_path+\"*.jpg\")\n",
+    "\n",
+    "  images = []\n",
+    "  for filename in filenames:\n",
+    "    img = cv2.imread(filename)\n",
+    "    images.append(img)\n",
+    "\n",
+    "  augmented_images = images + aug_seq(images=images*repeat) \n",
+    "  count = 0\n",
+    "  for img in augmented_images:\n",
+    "    cv2.imwrite(preprop_images_path+directory+\"/\"+str(count)+\".jpg\", img)\n",
+    "    count += 1\n",
+    "\n",
+    "def gen_metadata(directory):\n",
+    "  images_path = \"../../../datasets/negev/articles_molecules/\"\n",
+    "  preprop_images_path = images_path+\"preprocess/\"\n",
+    "  preprop_aug_images_path = preprop_images_path+directory+\"/\"\n",
+    "  filenames = glob.glob(preprop_aug_images_path+\"*.jpg\")\n",
+    "  train, test = train_test_split(filenames, test_size=0.25, random_state=42)\n",
+    "\n",
+    "  with open(preprop_aug_images_path+\"xx_train.txt\", \"w\") as f:\n",
+    "    for filename in train[:-1]:\n",
+    "      f.write(filename+\"\\n\")\n",
+    "    f.write(train[-1])\n",
+    "\n",
+    "  with open(preprop_aug_images_path+\"xx_test.txt\", \"w\") as f:\n",
+    "    for filename in test[:-1]:\n",
+    "      f.write(filename+\"\\n\")\n",
+    "    f.write(test[-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "executionInfo": {
+     "elapsed": 6,
+     "status": "ok",
+     "timestamp": 1648059505528,
+     "user": {
+      "displayName": "Pedro Bedmar López",
+      "photoUrl": "https://lh3.googleusercontent.com/a-/AOh14GgDTwUVI1l0xxb1JsPU-jpXD7nANK221nZ_Rfet=s64",
+      "userId": "16390218131444039330"
+     },
+     "user_tz": -60
+    },
+    "id": "VIQ6RUKp-7XB"
+   },
+   "outputs": [],
+   "source": [
+    "aug(\"aug2\", augmentation_seq_2, repeat=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gen_metadata(\"aug2\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "README.md  \u001B[0m\u001B[01;34mdatasets\u001B[0m/  \u001B[01;34mexperiments\u001B[0m/  \u001B[01;34mpapers\u001B[0m/  \u001B[01;34mreport\u001B[0m/  requirements.txt  \u001B[01;34mslides\u001B[0m/\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "ls ../../.."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "colab": {
+   "collapsed_sections": [],
+   "name": "data_generation_and_aug.ipynb",
+   "provenance": []
+  },
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.12"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 1
+}
