test other augmentations

--- a/experiments/taming_transformers/data_generation_and_aug.ipynb
+++ b/experiments/taming_transformers/data_generation_and_aug.ipynb
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "executionInfo": {
      "elapsed": 696,
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
    "metadata": {
     "executionInfo": {
      "elapsed": 1301,
@@ -281,8 +281,6 @@
    "source": [
     "import imgaug as ia\n",
     "from imgaug import augmenters as iaa\n",
-    "\n",
-    "ia.seed(1)\n",
     "\n",
     "augmentation_seq = iaa.Sequential([\n",
     "                      iaa.Sometimes(0.5, iaa.GaussianBlur(sigma=(0, 0.5))),\n",
@@ -308,12 +306,26 @@
     "                      iaa.Multiply((0.8, 1.2), per_channel=0.25),\n",
     "                      iaa.AdditiveGaussianNoise(loc=0, scale=(0.0, 0.05*255), per_channel=0.3),\n",
     "                      iaa.Fliplr(0.3)\n",
+    "], random_order=True)\n",
+    "\n",
+    "augmentation_seq_3 = iaa.Sequential([\n",
+    "                      iaa.Sometimes(0.5, iaa.GaussianBlur(sigma=(0, 0.5))),\n",
+    "                      iaa.LinearContrast((0.7, 1.75)),\n",
+    "                      iaa.Affine(\n",
+    "                          scale={\"x\": (0.7, 1.0), \"y\": (0.7, 1.0)},\n",
+    "                          rotate=(-45, 45),\n",
+    "                          shear=(-10,10),\n",
+    "                          translate_percent={\"x\": (-0.1, 0.1), \"y\": (-0.1, 0.1)},\n",
+    "                          cval=255\n",
+    "                      ),\n",
+    "                      iaa.Sometimes(0.7, iaa.AdditiveGaussianNoise(loc=0, scale=(0.0, 0.025*255))),\n",
+    "                      iaa.Fliplr(0.3)\n",
     "], random_order=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 32,
    "metadata": {
     "executionInfo": {
      "elapsed": 217909,
@@ -335,8 +347,8 @@
     "from sklearn.model_selection import train_test_split\n",
     "import cv2\n",
     "\n",
-    "\n",
     "def aug(directory, aug_seq, repeat=2):\n",
+    "  ia.seed(1)\n",
     "  images_path = \"../../../datasets/negev/articles_molecules/\"\n",
     "  preprop_images_path = images_path+\"preprocess/\"\n",
     "  filenames = glob.glob(preprop_images_path+\"*.jpg\")\n",
@@ -346,7 +358,9 @@
     "    img = cv2.imread(filename)\n",
     "    images.append(img)\n",
     "\n",
-    "  augmented_images = images + aug_seq(images=images*repeat) \n",
+    "  augmented_images = images + aug_seq(images=images*repeat)\n",
+    "\n",
+    "  os.makedirs(preprop_images_path+directory, exist_ok=True)\n",
     "  count = 0\n",
     "  for img in augmented_images:\n",
     "    cv2.imwrite(preprop_images_path+directory+\"/\"+str(count)+\".jpg\", img)\n",
@@ -389,7 +403,8 @@
    },
    "outputs": [],
    "source": [
-    "aug(\"aug2\", augmentation_seq_2, repeat=3)"
+    "aug(\"aug\", augmentation_seq, repeat=2)\n",
+    "gen_metadata(\"aug\")"
    ]
   },
   {
@@ -398,24 +413,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "aug(\"aug2\", augmentation_seq_2, repeat=3)\n",
     "gen_metadata(\"aug2\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "README.md  \u001B[0m\u001B[01;34mdatasets\u001B[0m/  \u001B[01;34mexperiments\u001B[0m/  \u001B[01;34mpapers\u001B[0m/  \u001B[01;34mreport\u001B[0m/  requirements.txt  \u001B[01;34mslides\u001B[0m/\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "ls ../../.."
+    "aug(\"aug3\", augmentation_seq_3, repeat=3)\n",
+    "gen_metadata(\"aug3\")"
    ]
   },
   {
